--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
         <!-- <p>It works!!!</p> -->
     </div>
 
-    <div>
+    <!-- <div>
         <p>published: 11.06.2019, 2.04</p>
         <h2><a href="">My first post</a></h2>
         <p>whbefo iwbrvo ebvwer rhbuweor hubv</p>
@@ -20,7 +20,16 @@
         <p>published: 11.06.2019, 2.04</p>
         <h2><a href="">My second post</a></h2>
         <p>lisdfvo sifbvs oeifnboi fnvaof nvaoijrn</p>
-    </div>
+    </div> -->
+    <!-- {{posts}} -->
+    {% for post in posts%}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href=""{{ post.title }}></a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+        {{post}}
+    {% endfor %}
 
 </body>
 
